<resources>
    <string name="app_name">UF-Schedule-App</string>
    <string name="edit_message">Enter a message</string>
    <string name="course1">Course 1</string>
    <string name="course2">Course 2</string>
    <string name="course3">Course 3</string>
    <string name="course4">Course 4</string>
    <string name="button_send">Send</string>
    <string name="title_activity_filter">Filters</string>
    <string name="filterBarOpen">-- Filters</string>
    <string name="filterBarClosed">+ Filters</string>
    <string name="courseFilterOpen">-- Course Filters</string>
    <string name="courseFilterClosed">+ Course Filters</string>
    <string name="meetingOpen">-- Class Meeting</string>
    <string name="meetingClosed">+ Class Meeting</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name = "periods">
        <item>Periods</item>
        <item>7:25AM-8:15AM</item>
        <item>8:30AM-9:20AM</item>
        <item>9:35AM-10:25AM</item>
        <item>10:40AM-11:30AM</item>
        <item>11:45AM-12:35PM</item>
        <item>12:50PM-1:40PM</item>
        <item>1:55PM-2:45PM</item>
        <item>3:00PM-3:50PM</item>
        <item>4:05PM-4:55PM</item>
        <item>5:10PM-6:00PM</item>
        <item>6:15PM-7:05PM</item>
        <item>7:20PM-8:10PM</item>
        <item>8:20PM-9:10PM</item>
        <item>9:20PM-10:10PM</item>
        <item>Online</item>
    </string-array>

    <string-array name = "daysOfWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name = "dayInitials">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>R</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <integer name = "numPeriods">16</integer>
    <string-array name="level_minimum">
        <item>--  </item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
    </string-array>

    <string-array name="level_maximum">
        <item>--  </item>
        <item>1999</item>
        <item>2999</item>
        <item>3999</item>
        <item>4999</item>
        <item>5999</item>
        <item>6999</item>
        <item>7999</item>
        <item>8999</item>
    </string-array>

    <string-array name="periods_filter">
        <item>--  </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>E1</item>
        <item>E2</item>
        <item>E3</item>
    </string-array>

    <string-array name="programming_languages">
        <item>C++</item>
        <item>C#</item>
        <item>Java</item>
        <item>Javascript</item>
        <item>Kotlin</item>
        <item>Python</item>
        <item>Ruby</item>
        <item>Swift</item>
        <item>Typescript</item>
        <item>Visual Studio</item>
    </string-array>

    <string-array name="description">
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
        <item>This is a random description</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>